@@ -11,6 +11,7 @@
 		<languageKey index="default" type="array">
 			<label index="tx_oelib_test">oelib test records</label>
 			<label index="tx_oelib_test.title">Title:</label>
+			<label index="tx_oelib_test.related_records">Related Records:</label>
 		</languageKey>
 	</data>
 </T3locallang>
